Contract Configurator 1.8.2
- Added Vessel.VesselName() method.
- Added support for title in KerbalDeaths parameter.
_ Fixed issue with FacilityRequirement always thinking the player's facilities were maxed out.

Contract Configurator 1.8.1
- Added new Not parameter.
- Can now specify heading in SpawnKerbal.
- Fixed issue with index attribute not being recognized in HasPassengers (thanks inigmatus).
- Fixed issue with speed in KSP never being zero for ReachState (thanks inigmatus).
- Fixed exception in RecoverVessel when recovering via the VAB when another vessel is on the launchpad.
- Fixed issue with timers getting reset in VAB/SPH (thanks chrisl).
- Removed long-ago deprecated CC_SCANsat.dll (this does not remove SCANsat support).

Contract Configurator 1.8.0
- Support for KSP 1.0.5

Contract Configurator 1.7.8
- Fixed issue with timer parameter text not always updating (thanks mer & severedsolo).
- Fixed issue with timer parameter not always starting up (thanks mer).
- Fixed issue with contracts not being correctly disabled when requested (thanks severedsolo).
- Fixed minTerrainAltitude and maxTerrainAltitude to check terrain altitude and not ASL (thanks space-is-hard).
- Fixed issue with interaction between SpawnKerbal and RecoverKerbal causing exception that didn't clean up Kerbals (thanks arilm21).
- Minor bug fixes.

Contract Configurator 1.7.7
- Fixed issues with PartTest parameter not making the "Run Test" option show up on parts to be tested (thanks Sticky32).
- Fixed issue with double() and other cast functions not working when casting from a non-numeric type (thanks chrisl).
- Fixed issue with disabled contracts not actually staying disabled (thanks DeCi & Svm420).
- Additional fixes to Duration reset issues (thanks chrisl).
- Additional error handling in string parsing for expressions.

Contract Configurator 1.7.6
- Added Reputation() function to get the player's current reputation.