@@ -1,7 +1,8 @@
 Contract Configurator 1.8.2
 - Added Vessel.VesselName() method.
 - Added support for title in KerbalDeaths parameter.
-_ Fixed issue with FacilityRequirement always thinking the player's facilities were maxed out.
+- Fixed issue with FacilityRequirement always thinking the player's facilities were maxed out.
+- Fixed exception in WaypointGenerator for BaseConstruction (thanks dakakeisalie).
 
 Contract Configurator 1.8.1
 - Added new Not parameter.
